--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,5 @@
-@import url("bootstrap/dist/css/bootstrap.min.css");
-@import url("bootstrap/dist/css/bootstrap-theme.min.css");
+@import url("../bower_components/bootstrap/dist/css/bootstrap.min.css");
+@import url("../bower_components/bootstrap/dist/css/bootstrap-theme.min.css");
 
 /* Put your CSS here */
 html, body {
