--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,9 @@
 @import url("../bower_components/bootstrap/dist/css/bootstrap.min.css");
 @import url("../bower_components/bootstrap/dist/css/bootstrap-theme.min.css");
 
+@import url("chosen.css");
+@import url("iCheck/skins/minimal/blue.css");
+
 /* Put your CSS here */
 html, body {
     margin: 20px;
