--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,61 @@
-<div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
+<div class="row">
+	<div class="col-lg-12">
+		<form role="form">
+			<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+			</div>
+			<div class="form-group">
+				<label for="exampleInputPassword1">Password</label>
+				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			</div>
+			<div class="form-group">
+				<label for="exampleInputFile">File input</label>
+				<input type="file" id="exampleInputFile">
+				<p class="help-block">Example block-level help text here.</p>
+			</div>
+			<div class="form-group">
+				<label for="selectInput1">Select</label>
+				<select id="selectInput1">
+					<option value="1">Test</option>
+				</select>
+			</div>
+			<div class="checkbox">
+				<label>
+					<input type="checkbox">Check me out
+				</label>
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-12">
+		<table class="table table-striped table-bordered table-hover">
+			<thead>
+				<tr>
+					<th>{{ 'EMPLOYEE' | translate }}</th>
+					<th>{{ 'DATE' | translate }}</th>
+					<th>{{ 'HOURS' | translate }}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>BW</td>
+					<td>01.10.2013</td>
+					<td>8</td>
+				</tr>
+				<tr>
+					<td>BW</td>
+					<td>02.10.2013</td>
+					<td>8</td>
+				</tr>
+				<tr>
+					<td>BW</td>
+					<td>03.10.2013</td>
+					<td>8</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
