--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,28 +9,13 @@
 				<label for="exampleInputPassword1">Password</label>
 				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 			</div>
-			<div class="form-group">
-				<label for="exampleInputFile">File input</label>
-				<input type="file" id="exampleInputFile">
-				<p class="help-block">Example block-level help text here.</p>
-			</div>
-			<div class="form-group">
-				<label for="selectInput1">Select</label>
-				<select id="selectInput1">
-					<option value="1">Test</option>
-				</select>
-			</div>
-			<div class="checkbox">
-				<label>
-					<input type="checkbox">Check me out
-				</label>
-			</div>
 			<button type="submit" class="btn btn-default">Submit</button>
 		</form>
 	</div>
 </div>
 <div class="row">
 	<div class="col-lg-12">
+		<p ng-repeat="awesomeThing in awesomeThings"><strong>{{awesomeThing.value}}</strong></p>
 		<table class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>
