--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,15 @@
 				<label for="exampleInputPassword1">Password</label>
 				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 			</div>
+			<div class="form-group">
+				<label for="select2">Select</label>
+				<select ui-select2 ng-model="select2" data-placeholder="Pick a number">
+				    <option value=""></option>
+				    <option value="one">First</option>
+				    <option value="two">Second</option>
+				    <option value="three">Third</option>
+				</select>
+			</div>
 			<button type="submit" class="btn btn-default">Submit</button>
 		</form>
 	</div>
