--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,23 +2,23 @@
 	<div class="col-lg-12">
 		<form role="form">
 			<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+				<label for="domain">{{ 'DOMAIN' | translate }}</label>
+				<input type="text" class="form-control" id="domain" ng-model="domain" placeholder="{{ 'ENTER_DOMAIN' | translate }}">
 			</div>
 			<div class="form-group">
-				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+				<label for="apiKey">{{ 'API_KEY' | translate }}</label>
+				<input type="apiKey" class="form-control" id="apiKey" ng-model="apiKey" placeholder="{{ 'ENTER_API_KEY' | translate }}">
 			</div>
 			<div class="form-group">
-				<label for="select2">Select</label>
-				<select ui-select2 ng-model="select2" data-placeholder="Pick a number">
+				<label for="project">{{ 'PROJECT' | translate }}</label>
+				<select ui-select2 ng-model="project" data-placeholder="{{ 'SELECT_PROJECT' | translate }}">
 				    <option value=""></option>
 				    <option value="one">First</option>
 				    <option value="two">Second</option>
 				    <option value="three">Third</option>
 				</select>
 			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
+			<button type="submit" class="btn btn-default">{{ 'SUBMIT' | translate }}</button>
 		</form>
 	</div>
 </div>
