--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-lg-12 well">
-		<form role="form" ng-submit="displayTimes()">
+		<form role="form" ng-submit="login()">
 			<div class="form-group">
 				<label for="domain">{{ 'DOMAIN' | translate }}</label>
 				<input type="text" class="form-control" id="domain" ng-model="domain" placeholder="{{ 'ENTER_DOMAIN' | translate }}">
@@ -11,10 +11,16 @@
 				<label for="apiKey">{{ 'API_KEY' | translate }}</label>
 				<input type="text" class="form-control" id="apiKey" ng-model="apiKey" placeholder="{{ 'ENTER_API_KEY' | translate }}">
 			</div>
+			<button type="submit" class="btn btn-default">{{ 'LOGIN' | translate }}</button>
+		</form>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-12 well">
+		<form role="form" ng-submit="displayTimes()">
 			<div class="form-group">
 				<label for="project">{{ 'PROJECT' | translate }}</label>
 				<select ui-select2 ng-model="project" data-placeholder="{{ 'SELECT_PROJECT' | translate }}">
-				    <option value=""></option>
 				    <option ng-repeat="project in projects" value="{{project.key}}">{{project.value}}</option>
 				</select>
 			</div>
@@ -32,7 +38,6 @@
 </div>
 <div class="row">
 	<div class="col-lg-12">
-		<p ng-repeat="awesomeThing in awesomeThings"><strong>{{awesomeThing.value}}</strong></p>
 		<table class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>
