--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -74,3 +74,11 @@ input[type="color"]:focus,
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
+
+#main_footer {
+  margin: auto;
+  padding: 10px;
+  width: 96%;
+  text-align: center;
+  font-size: 12px;
+}
