--- a/app/views/main.html
+++ b/app/views/main.html
@@ -63,3 +63,6 @@
 		</table>
 	</div>
 </div>
+<footer>
+	<div id="main_footer">created by <a href="http://fullmontymedia.com" title="Full Monty Media">Full Monty Media</a>, {{currentYear}}.</div>
+</footer>
