--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,8 +11,8 @@
 	<div class="col-lg-12 well">
 		<form role="form" ng-submit="login()">
 			<div class="form-group">
-				<label for="domain">{{ 'DOMAIN' | translate }}</label>
-				<input type="text" class="form-control" id="domain" ng-model="domain" placeholder="{{ 'ENTER_DOMAIN' | translate }}">
+				<label for="accountName">{{ 'ACCOUNT_NAME' | translate }}</label>
+				<input type="text" class="form-control" id="accountName" ng-model="accountName" placeholder="{{ 'ENTER_ACCOUNT_NAME' | translate }}">
 			</div>
 			<div class="form-group">
 				<label for="apiKey">{{ 'API_KEY' | translate }}</label>
