--- a/app/views/main.html
+++ b/app/views/main.html
@@ -82,5 +82,5 @@
 	</div>
 </div>
 <footer>
-	<div id="main_footer">created by <a href="http://fullmontymedia.com" title="Full Monty Media">Full Monty Media</a>, {{currentYear}}.</div>
+	<div id="main_footer" ng-hide="hideButtons">created by <a href="http://fullmontymedia.com" title="Full Monty Media">Full Monty Media</a>, {{currentYear}}.</div>
 </footer>
